working auth + getting task list

--- a/MvcApplication1/Views/Test/Index.cshtml
+++ b/MvcApplication1/Views/Test/Index.cshtml
@@ -20,6 +20,11 @@
         <hr />
 
         @Session["TokenJson"]
+
+        <a href="/Test/ShowTasks">Show tasks, AFTER you get the token!</a>
+
+        <hr />
+
     </div>
 </body>
 </html>
